--- a/sites/configurations/fundingscotland/partials/account/sign-in.hbs
+++ b/sites/configurations/fundingscotland/partials/account/sign-in.hbs
@@ -8,10 +8,10 @@
   });
 </script>
 {{else}}
-<form id="sign-in-form" method="POST" class="sign-in-form search-form mdc-elevation--z5">
-  <div class="mdc-card">
-    <!-- <div class="mdc-card__info--fund">
-      <div class="mdc-card__info--fund-title mdc-typography--headline4 x-padding">
+<form id="sign-in-form" method="POST" class="sign-in-form">
+  <div class="mdc-card mdc-elevation--z0">
+    <div class="mdc-card__info--content-primary">
+      <div class="mdc-card__info--content-primary-title mdc-typography--headline4 x-padding">
         {{#if @root.request.params.query.reauth}}
           Reauthenticate
         {{else}}
@@ -19,57 +19,51 @@
         {{/if}}
       </div>
       {{#if @root.request.params.query.reauth}}
-        <div class="mdc-card__info--fund-title mdc-typography--headline5 x-padding">
+        <div class="mdc-card__info--content-primary-title mdc-typography--headline5 x-padding">
           Before you can do that you must sign in again
         </div>
       {{/if}}
-    </div> -->
+    </div>
     <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="sign-in-message">
       <span id="form-message"></span>
     </div>
     <div class="mdc-card__info x-padding-full">
       <div class="mdc-typography--body1" id="form-section-email">
-        <!-- {{> account_sign_in_social loaderSelector="#sign-in-loader" messageSelector="#sign-in-message"}}
-
-        <div class="middle-line-text">
-          <span>or</span>
-        </div> -->
-        <div class="mdc-layout-grid">
-          <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
-              <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-                <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-                <input type="text" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
-                <label class="mdc-floating-label" for="sign-in-email">
-                  Email
-                </label>
-                <div class="mdc-line-ripple"></div>
-              </div>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
-              <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-                <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-                <input type="password" id="sign-in-password" class="mdc-text-field__input mdc-text-field--fullwidth" />
-                <label class="mdc-floating-label" for="sign-in-password">
-                  Password
-                </label>
-                <div class="mdc-line-ripple"></div>
-              </div>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone">
-              <div id="form-section-sign-in-buttons">
-                <button class="mdc-button mdc-button--raised" type="submit" id="sign-in-submit">
-                  Sign in
-                  <span class="far fa-sign-in-alt" aria-hidden="true"></span>
-                </button>
-              </div>
-            </div>
-          </div>
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+          <input type="email" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
+          <label class="mdc-floating-label" for="sign-in-email">
+            Email
+          </label>
+          <div class="mdc-line-ripple"></div>
         </div>
-        <div class="card-loader" id="sign-in-loader">
-          <div class="card-loader-inner">
-            <span class="far fa-2x fa-circle-notch fa-spin"></span>
-          </div>
+
+        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+          <input type="password" id="sign-in-password" class="mdc-text-field__input mdc-text-field--fullwidth" />
+          <label class="mdc-floating-label" for="sign-in-password">
+            Password
+          </label>
+          <div class="mdc-line-ripple"></div>
+        </div>
+      </div>
+      <div id="form-section-sign-in-buttons">
+        <button class="mdc-button mdc-button--raised" type="submit" id="sign-in-submit">
+          Sign in
+        </button>
+        <div class="mdc-typography--body1 v-margin-full">
+          Forgot your password? <a href="/reset-password">Reset password</a>
+        </div>
+        <div class="mdc-typography--body1 v-margin-full">
+          Don't have an account? <a href="/sign-up">Sign up</a>
+        </div>
+        <div class="mdc-typography--body1 v-margin-full">
+          Read our <a href="/privacy" target="_blank">privacy notice</a>
+        </div>
+      </div>
+      <div class="card-loader" id="sign-in-loader">
+        <div class="card-loader-inner">
+          <span class="far fa-2x fa-circle-notch fa-spin"></span>
         </div>
       </div>
     </div>
@@ -95,14 +89,14 @@ document.addEventListener("DOMContentLoaded", function(event) {
         user.user.getIdTokenResult().then(function(idTokenResult) {
           console.log('ID Token Result', idTokenResult);
           fundingscotland.setCookie('fs_token', idTokenResult.token, 7);
-          window.location.href = '{{default @root.request.fullUrl "/"}}';
+          window.location.href = '{{#if (contains @root.request.headers.referer "sign-out")}}/{{else}}{{default @root.request.headers.referer "/"}}{{/if}}';
         });
       } else {
         $message.text('Something went wrong, signed in but no user?').show();
         $loader.css('display', 'none');
       }
     }).catch(function(err) {
-      $message.text(err.message).show();
+      $message.html(err.message+' <a href="/reset-password">Reset password</a>').show();
       $loader.css('display', 'none');
     });
   });
