--- a/sites/configurations/fundingscotland/partials/account/sign-up.hbs
+++ b/sites/configurations/fundingscotland/partials/account/sign-up.hbs
@@ -10,8 +10,8 @@
 {{else}}
 <form id="sign-up-form" method="POST" class="sign-in-form sign-up-form">
   <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--fund">
-      <div class="mdc-card__info--fund-title mdc-typography--headline4 x-padding">
+    <div class="mdc-card__info--content-primary">
+      <div class="mdc-card__info--content-primary-title mdc-typography--headline4 x-padding">
         Sign up
       </div>
     </div>
@@ -20,14 +20,9 @@
     </div>
     <div class="mdc-card__info x-padding-full">
       <div class="mdc-typography--body1" id="form-section-email">
-        <!-- {{> account_sign_in_social loaderSelector="#sign-up-loader" messageSelector="#sign-up-message"}}
-
-        <div class="middle-line-text">
-          <span>or</span>
-        </div> -->
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="sign-up-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
+          <input type="email" id="sign-up-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
           <label class="mdc-floating-label" for="sign-up-email">
             Email
           </label>
@@ -35,7 +30,7 @@
         </div>
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="sign-up-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
+          <input type="email" id="sign-up-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
           <label class="mdc-floating-label" for="sign-up-email-confirm">
             Confirm email
           </label>
@@ -63,9 +58,9 @@
         <button class="mdc-button mdc-button--raised" type="submit" id="sign-up-submit">
           Sign up
         </button>
-        <!-- <div class="mdc-typography--body1 v-margin-full">
+        <div class="mdc-typography--body1 v-margin-full">
           Already have an account? <a href="/sign-in">Sign in</a>
-        </div> -->
+        </div>
         <div class="mdc-typography--body1 v-margin-full">
           Read our <a href="/privacy" target="_blank">privacy notice</a>
         </div>
@@ -101,11 +96,15 @@ document.addEventListener("DOMContentLoaded", function(event) {
 
     if (email !== emailConfirm) {
       $message.text('The two email addresses entered do not match').show();
+      $loader.css('display', 'none');
+      document.body.scrollTop = document.documentElement.scrollTop = 0;
       return;
     }
 
     if (password !== passwordConfirm) {
       $message.text('The two passwords entered do not match').show();
+      $loader.css('display', 'none');
+      document.body.scrollTop = document.documentElement.scrollTop = 0;
       return;
     }
 
@@ -120,10 +119,12 @@ document.addEventListener("DOMContentLoaded", function(event) {
       } else {
         $message.text('Something went wrong, signed up but no user?').show();
         $loader.css('display', 'none');
+        document.body.scrollTop = document.documentElement.scrollTop = 0;
       }
     }).catch(function(err) {
       $message.text(err.message).show();
       $loader.css('display', 'none');
+      document.body.scrollTop = document.documentElement.scrollTop = 0;
     });
   });
 });
