--- a/sites/configurations/scvo/templates/pages/page-digital-evolution-senior-leaders.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital-evolution-senior-leaders.hbs
@@ -4,9 +4,14 @@
     {{> breadcrumbs}}
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
           {{{@root.data.primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
+          {{> menu_digital_evolution_senior_leaders}}
+        </div>
 
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content page-content">
           <h2 class="blogs">Testimonials</h2>
 
           <div class="mdc-layout-grid equal-height">
