Fixed email query when multiple parameters

--- a/sites/configurations/scvo/templates/pages/page-digital-evolution-senior-leaders.hbs
+++ b/sites/configurations/scvo/templates/pages/page-digital-evolution-senior-leaders.hbs
@@ -20,7 +20,7 @@
                   </section>
                   <section class="mdc-card__media">
                     <a href="/digital/evolution/senior-leaders/craig-wilson-of-big-hearts-on-the-slp/">
-                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/big-hearts.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
+                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/big-hearts.jpg" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
                     </a>
                   </section>
                 </div>
@@ -48,7 +48,7 @@
                   </section>
                   <section class="mdc-card__media">
                     <a href="/digital/evolution/senior-leaders/jane-griffin-of-lgbt-youth-scotland-on-the-slp/">
-                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/lgbtys.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
+                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/lgbtys.jpg" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
                     </a>
                   </section>
                 </div>
@@ -62,7 +62,7 @@
                   </section>
                   <section class="mdc-card__media">
                     <a href="/digital/evolution/senior-leaders/justina-murray-of-scottish-families-affected-by-alcohol-and-drugs-on-the-slp/">
-                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/sfad.png" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
+                      <img src="https://storage.googleapis.com/scvo-assets/scvo-frontend/temporary/sfad.jpg" class="responsive" style="margin:0 auto;display:block;zoom:.6;">
                     </a>
                   </section>
                 </div>
