--- a/sites/configurations/getinvolved/partials/organisation-search-form.hbs
+++ b/sites/configurations/getinvolved/partials/organisation-search-form.hbs
@@ -27,8 +27,8 @@
       {{>components_tab url=(concat "organisations/map" @root.request.url.search) iconClasses="far fa-map-marker-alt fa-fw" label="Map" active=(compare @root.request.url.pathname "===" "/organisations/map")}}
     {{/components_tab_bar}}
   </div>
-
-  <form action="/{{#compare @root.request.url.pathname "/map"}}organisations/map{{else}}organisations/search{{/compare}}" method="GET" class="search-form" novalidate>
+{{@root.request.url.pathname}}
+  <form action="/{{#compare @root.request.url.pathname "/organisations/map"}}organisations/map{{else}}organisations/search{{/compare}}" method="GET" class="search-form" novalidate>
     <input type="hidden" name="sort" value="{{@root.request.params.query.sort}}" id="{{instance_id}}-sort">
     <div class="h-padding">
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
