Inflect jobs summary (singular if 1)

--- a/sites/configurations/emailer/partials/bodies/goodmoves-saved-searches.html
+++ b/sites/configurations/emailer/partials/bodies/goodmoves-saved-searches.html
@@ -225,7 +225,7 @@
                                         <tr>
                                           <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                                             <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
-                                              <p>{{hits.total}} jobs matching your saved search preferences were added to Goodmoves since the {{momentFormat (moment subscription.lastSent "") "Do \o\f MMMM"}}.</p>
+                                              <p>{{inflect hits.total "job" "jobs" true}} matching your saved search preferences were added to Goodmoves since the {{momentFormat (moment subscription.lastSent "") "Do \o\f MMMM"}}.</p>
                                             </div>
                                           </td>
                                         </tr>
