--- a/sites/configurations/getinvolved/partials/opportunity/full.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/full.hbs
@@ -30,7 +30,7 @@
             {{#if available_from ~}}
               <li class="mdc-card__info--content-primary-from mdc-typography--body1">
                 <span class="fa-li"><span class="far fa-calendar-plus fa-fw" title="Start date"></span></span>
-                Advertised from {{momentFormat (moment available_from "x") "Do MMMM YYYY"}}
+                Volunteers wanted from {{momentFormat (moment available_from "x") "Do MMMM YYYY"}}
               </li>
             {{/if ~}}
           </ul>
