--- a/sites/configurations/getinvolved/partials/favourite-chip.hbs
+++ b/sites/configurations/getinvolved/partials/favourite-chip.hbs
@@ -4,7 +4,7 @@
     offUrl=(concat "/remove-from-favourties?id=" id)
     onText="Favourite"
     offText="Favourite"
-    iconClasses="far fa-star"
+    iconClasses="far fa-heart"
     on=(contains (map @root.data.favourites.items.[0] (getProp "value")) id)
   }}
   {
