--- a/sites/configurations/getinvolved/partials/favourite-chip.hbs
+++ b/sites/configurations/getinvolved/partials/favourite-chip.hbs
@@ -19,7 +19,7 @@
   {{/ajax_chip}}
 {{else}}
   <div class="mdc-chip" data-dialog-target="#favourite-dialog">
-    <span class="far fa-star mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>
+    <span class="far fa-heart mdc-chip__icon mdc-chip__icon--leading" aria-hidden="true"></span>
     <div class="mdc-chip__text noselect">Favourite</div>
   </div>
 {{/if ~}}
