--- a/sites/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/full.hbs
@@ -61,21 +61,29 @@
       <div class="panel mdc-card--full-content" role="tabpanel" aria-hidden="true" data-tab-name="panel-2">
         <div class="location-info">
           {{#compare (length geo_vacancy_coords) ">" 0 ~}}
-            <div class="container-content container-map">
-              <div id="map-content-primary" data-map-name="vacancyMap" data-map-options='{
-                  }'>
-                {{#each (arrayify geo_vacancy_coords) ~}}
-                  <marker style="display:none;" data-map="vacancyMap" data-lat="{{lat}}" data-lng="{{lon}}" data-title="{{../organisation.name}} - {{../title}}">
-                    <h3 class="mdc-typography--headline7">{{../organisation.name}}</h3>
-                    <p class="mdc-typography--body2">{{../title}}</p>
-                  </marker>
-                {{/each ~}}
+            {{#ifAny home_based various_locations ~}}
+              <div class="container-content v-margin-full">
+                <p class="mdc-typography--body1">
+                  {{{location}}}
+                </p>
               </div>
-            </div>
+            {{else}}
+              <div class="container-content container-map">
+                <div id="map-content-primary" data-map-name="vacancyMap" data-map-options='{
+                    }'>
+                  {{#each (arrayify geo_vacancy_coords) ~}}
+                    <marker style="display:none;" data-map="vacancyMap" data-lat="{{lat}}" data-lng="{{lon}}" data-title="{{../organisation.name}} - {{../title}}">
+                      <h3 class="mdc-typography--headline7">{{../organisation.name}}</h3>
+                      <p class="mdc-typography--body2">{{../title}}</p>
+                    </marker>
+                  {{/each ~}}
+                </div>
+              </div>
+            {{/ifAny ~}}
           {{else}}
             <div class="container-content v-margin-full">
               <p class="mdc-typography--body1">
-                Area: {{{location}}}. Specific job location not provided.
+                Area: {{{location}}} - a specific job location has not been provided.
               </p>
             </div>
           {{/compare ~}}
