--- a/sites/configurations/emailer/emails/goodmoves-saved-searches.mjml
+++ b/sites/configurations/emailer/emails/goodmoves-saved-searches.mjml
@@ -12,7 +12,7 @@
           <mj-section>
             <mj-column padding="0px">
               <mj-text font-size="16px" color="#000000" font-family="Montserrat, Helvetica, Arial, sans-serif">
-                <p>{{inflect hits.total "job" "jobs" true}} matching your saved search preferences {{inflect hits.total “was” “were”}} added to Goodmoves since the {{momentFormat (moment subscription.lastSent "") "Do \o\f MMMM"}}.</p>
+                <p>{{inflect hits.total "job" "jobs" true}} matching your preferences {{inflect hits.total “was” “were”}} added to Goodmoves since the {{momentFormat (moment subscription.lastSent "") "Do \o\f MMMM"}}.</p>
               </mj-text>
             </mj-column>
           </mj-section>
