--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -21,8 +21,7 @@
 <div class="mdc-drawer__header">
   <h3 class="mdc-drawer__title">Search jobs</h3>
   {{#compare @root.route.name "jobs_in"}}
-    <h6 class="mdc-drawer__subtitle">
-      in {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}
+    <h6 class="mdc-drawer__subtitle">in {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}
       {{~#if @root.request.params.ward}}, 
         {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}}
       {{/if}}
