Sorted out some title stuff

--- a/sites/configurations/goodmoves/templates/vacancies/jobs-in.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/jobs-in.hbs
@@ -1,5 +1,5 @@
 <div id="detailed-results-container" class="container-content content-primary-search">
-  <h1>
+  <h1>Jobs in 
       {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}
       {{~#if @root.request.params.ward}}, 
         {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}}
