Added colon to title

--- a/sites/configurations/goodmoves/templates/vacancies/search-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/search-head-tags.hbs
@@ -1,6 +1,6 @@
 {{#if @root.request.params.district}}
-<title>Goodmoves – Jobs in {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}{{~#if @root.request.params.ward}}, {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}}{{/if}}</title>
-<meta property="og:title" content="Goodmoves – Jobs in {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}{{~#if @root.request.params.ward}}, {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}}{{/if}}" data-dynamic="true">
+<title>Goodmoves – Jobs in: {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}{{~#if @root.request.params.ward}}, {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}}{{/if}}</title>
+<meta property="og:title" content="Goodmoves – Jobs in: {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}{{~#if @root.request.params.ward}}, {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}}{{/if}}" data-dynamic="true">
 {{else}}
 <title>Goodmoves – Search results</title>
 <meta property="og:title" content="Goodmoves – Search results" data-dynamic="true">
