--- a/sites/configurations/goodmoves/templates/vacancies/jobs-in.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/jobs-in.hbs
@@ -1,18 +1,19 @@
 <div id="detailed-results-container" class="container-content content-primary-search">
-  <h1>Jobs in:  
-      {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}
-      {{~#if @root.request.params.ward}}, 
-        {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}}
-      {{/if}}
+  <h1 class="mdc-typography--headline3">
+    Jobs in
+    {{~#if @root.request.params.ward}}
+    {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}},
+    {{/if~}}
+    {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}
   </h1>
 
   <div class="container-content container-map">
-    <div id="map-content-primary" data-map-name="vacancyMap" data-map-options='{}'>
+    <div id="map-content-primary" data-map-name="vacancyMap" data-map-options="{}">
       {{#each @root.data.search_data.detailed_results.hits.hits ~}}
         {{#if _source.geo_vacancy_info ~}}
           {{#each (arrayify _source.geo_vacancy_info) ~}}
             {{#compare @root.request.params.district (slugify admin_district)}}
-              {{#ifAny (if @root.request.params.ward false else=true) (compare @root.request.params.ward "===" (slugify admin_ward))}}
+              {{#ifAny (if @root.request.params.ward false else=true) (compare @root.request.params.ward "===" (slugify (replace (replace admin_ward " City" "") "City of " "")))}}
               <marker style="display:none;" data-map="vacancyMap" data-lat="{{latitude}}" data-lng="{{longitude}}" data-shortlisted="{{#each @root.data.shortlist.items}}{{#compare id "===" ../../_source.Id}}true{{/compare}}{{/each}}" data-homebased="{{#if ../_source.home_based}}true{{/if}}" data-variouslocations="{{#if ../_source.various_locations}}true{{/if}}" data-title="{{../_source.title}}">
                 {{>vacancy_map ../_source}}
               </marker>
@@ -24,10 +25,10 @@
     </div>
   </div>
 
-  <h2> 
+  <h2 class="mdc-typography--headline5">
     <a href="/jobs-in/{{@root.request.params.district}}">{{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}</a>
     areas with jobs
-  </h2>  
+  </h2>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner" style="grid-gap:0!important">
       {{#each (getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards"))}}
@@ -45,13 +46,13 @@
     <strong>
       Total number of jobs in
       {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".term")}}
-      {{~#if @root.request.params.ward}}, 
+      {{~#if @root.request.params.ward}},
         {{getProperty @root.data.termsMaps.districts.slugsMap (concat @root.request.params.district ".wards." @root.request.params.ward ".term")}}
       {{/if}}
       :
     </strong> {{@root.data.search_data.detailed_results.hits.total}}
   </div>
-  
+
   {{#each @root.data.search_data.detailed_results.hits.hits ~}}
   {{> vacancy_search_result _source sort=sort distance=fields.distance.[0]}}
   {{/each ~}}
